Prevent wrapping when window is small

--- a/frontend/src/pages/AgencyProfileForm/FormStyle.css
+++ b/frontend/src/pages/AgencyProfileForm/FormStyle.css
@@ -2,6 +2,7 @@
 
 .form-body {
   margin: 62px 0px 64px 130px;
+  white-space: nowrap;
 }
 
 .form-section {
